fix alignment for project section

--- a/css/styles.css
+++ b/css/styles.css
@@ -206,3 +206,74 @@ header {
   font-size: var(--fs-h3);
   padding: 1em;
 }
+/* Section Favorite Projects */
+.container-inner--featured-projects {
+  border: 2px solid blueviolet;
+}
+.featured-projects--title {
+  margin-bottom: 2em;
+}
+.featured-projects--content {
+  border: 2px solid palevioletred;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 2em;
+}
+.project-box {
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid goldenrod;
+  padding-block: 2em;
+}
+.project-name {
+  font-size: var(--fs-h3);
+  margin-bottom: 0.5em;
+}
+.project-box-img-container {
+  width: 350px;
+  height: 250px;
+  border: 2px solid green;
+  border-radius: 20px;
+  margin-bottom: 0.5em;
+}
+.project-box-tech-stack {
+  justify-content: space-around;
+  border: 2px solid blue;
+  width: 80%;
+  padding-block: 0.25em;
+  margin-bottom: 0.5em;
+}
+.tech-icon {
+  flex-direction: row;
+  font-size: var(--fs-h3);
+  background-color: var(--clr-accent-400);
+  padding: 0.35em 0.75em;
+  border-radius: 25px;
+}
+.tech-icon--name {
+  margin-left: 0.25em;
+}
+.project-box-description {
+  max-width: 40ch;
+  margin-block: 0.5em;
+}
+.project-box-btn-container {
+  border: 2px solid orangered;
+  width: 80%;
+  justify-content: space-around;
+}
+.project-btn {
+  background-color: inherit;
+  color: var(--clr-dark);
+  border: 2.5px solid var(--clr-dark);
+  border-radius: 15px;
+  font-weight: var(--fw-bold);
+}
+.btn-icon {
+  font-size: var(--fs-h3);
+}
+.project-box-footer {
+  margin-block: 2em;
+}
+.btn-portfolio {
+  font-size: var(--fs-h3);
+}
